tests/ui/repr/repr-transparent.stderr
error[E0690]: transparent struct needs at most one field of non-zero size or alignment larger than 1, but has 2
  --> $DIR/repr-transparent.rs:26:1
   |
LL | struct MultipleNonZst(u8, u8);
   | ^^^^^^^^^^^^^^^^^^^^^ --  -- this field is non-zero-sized
   | |                     |
   | |                     this field is non-zero-sized
   | needs at most one field of non-zero size or alignment larger than 1, but has 2

error[E0690]: transparent struct needs at most one field of non-zero size or alignment larger than 1, but has 2
  --> $DIR/repr-transparent.rs:33:1
   |
LL | pub struct StructWithProjection(f32, <f32 as Mirror>::It);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ---  ------------------- this field is non-zero-sized
   | |                               |
   | |                               this field is non-zero-sized
   | needs at most one field of non-zero size or alignment larger than 1, but has 2

error[E0691]: zero-sized field in transparent struct has alignment larger than 1
  --> $DIR/repr-transparent.rs:37:32
   |
LL | struct NontrivialAlignZst(u32, [u16; 0]);
   |                                ^^^^^^^^ has alignment of 2, which is larger than 1

error[E0691]: zero-sized field in transparent struct has alignment larger than 1
  --> $DIR/repr-transparent.rs:43:24
   |
LL | struct GenericAlign<T>(ZstAlign32<T>, u32);
   |                        ^^^^^^^^^^^^^ has alignment of 32, which is larger than 1

error[E0084]: unsupported representation for zero-variant enum
  --> $DIR/repr-transparent.rs:45:1
   |
LL | #[repr(transparent)]
   | ^^^^^^^^^^^^^^^^^^^^
LL | enum Void {}
   | --------- zero-variant enum

error[E0731]: transparent enum needs exactly one variant, but has 0
  --> $DIR/repr-transparent.rs:46:1
   |
LL | enum Void {}
   | ^^^^^^^^^ needs exactly one variant, but has 0

error[E0690]: the variant of a transparent enum needs at most one field of non-zero size or alignment larger than 1, but has 2
  --> $DIR/repr-transparent.rs:59:1
   |
LL | enum TooManyFieldsEnum {
   | ^^^^^^^^^^^^^^^^^^^^^^ needs at most one field of non-zero size or alignment larger than 1, but has 2
LL |     Foo(u32, String),
   |         ---  ------ this field is non-zero-sized
   |         |
   |         this field is non-zero-sized

error[E0731]: transparent enum needs exactly one variant, but has 2
  --> $DIR/repr-transparent.rs:65:1
   |
LL | enum MultipleVariants {
   | ^^^^^^^^^^^^^^^^^^^^^ needs exactly one variant, but has 2
LL |     Foo(String),
   |     --- variant here
LL |     Bar,
   |     --- too many variants in `MultipleVariants`

error[E0691]: zero-sized field in transparent enum has alignment larger than 1
  --> $DIR/repr-transparent.rs:72:14
   |
LL |     Foo(u32, [u16; 0]),
   |              ^^^^^^^^ has alignment of 2, which is larger than 1

error[E0691]: zero-sized field in transparent enum has alignment larger than 1
  --> $DIR/repr-transparent.rs:77:11
   |
LL |     Foo { bar: ZstAlign32<T>, baz: u32 }
   |           ^^^^^^^^^^^^^^^^^^ has alignment of 32, which is larger than 1

error[E0690]: transparent union needs at most one field of non-zero size or alignment larger than 1, but has 2
  --> $DIR/repr-transparent.rs:86:1
   |
LL | union TooManyFields {
   | ^^^^^^^^^^^^^^^^^^^ needs at most one field of non-zero size or alignment larger than 1, but has 2
LL |     u: u32,
   |     ------ this field is non-zero-sized
LL |     s: i32
   |     ------ this field is non-zero-sized

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0084, E0690, E0691, E0731.
For more information about an error, try `rustc --explain E0084`.
